--- a/src/app/auth/user-dashboard/user-dashboard.component.scss
+++ b/src/app/auth/user-dashboard/user-dashboard.component.scss
@@ -1,24 +1,53 @@
-.cardStyle{
-    max-width: 500px;
-    margin-left: 40%;
-    margin-top: 5%;
+.cardStyle {
+  max-width: 500px;
 }
 
 a:link {
-    text-decoration: none;
-  }
-  
-  a:visited {
-    text-decoration: none;
-  }
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
 
 
-  /* unvisited link */
+/* unvisited link */
 a:link {
-    color: wheat;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: wheat;
-  }
+  color: wheat;
+}
+
+/* visited link */
+a:visited {
+  color: wheat;
+}
+
+
+.jumbotronClass {
+  background-image: url('../../../assets/img/5.jpeg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.jumboTexts {
+  color: wheat;
+  font-weight: bold;
+}
+
+.jumboSubTexts {
+  color: white;
+}
+
+hr {
+  border: 1px solid wheat;
+}
+
+:host {
+  display: block;
+  background-image: url('../../../assets/img/5.jpeg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
