--- a/src/app/home/user-home/user-home.component.html
+++ b/src/app/home/user-home/user-home.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <h1 class="display-4">
-        Welcome
+        WELCOME
     </h1>
     <p>
         Please Select Your Desired Option!!
