--- a/src/app/vendor-creation/vendor-list/vendor-list.component.html
+++ b/src/app/vendor-creation/vendor-list/vendor-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <!--Add Employee-->
+    <!--Add Vendor-->
     <div class="header">
         <div class="row">
             <div class="col-sm-8">
@@ -7,13 +7,13 @@
                     [(ngModel)]="searchTerm">
             </div>
             <div class="col-sm-4">
-                <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-outline-primary custom-margin-add">
+                <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-primary custom-margin-add">
                     <span><i class="fa fa-user-plus fa-lg"></i></span>
                     <br>Add Vendor</a>
             </div>
         </div>
     </div>
-    <table class="table table-hover table-bordered">
+    <table class="table table-dark text-center">
         <thead>
             <tr>
                 <th>ID</th>
