--- a/src/app/vendor-creation/vendor-list/vendor-list.component.scss
+++ b/src/app/vendor-creation/vendor-list/vendor-list.component.scss
@@ -10,3 +10,9 @@
     float: right;
     //border-radius: 20px;
 }
+.custom-page{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    float: right;
+    //border-radius: 20px;
+}
