--- a/src/app/vendor-creation/vendor-list/vendor-list.component.html
+++ b/src/app/vendor-creation/vendor-list/vendor-list.component.html
@@ -1,5 +1,7 @@
+<!--
 <div class="container">
     <!--Add Vendor-->
+<!--
     <div class="header">
         <div class="row">
             <div class="col-sm-8">
@@ -13,42 +15,68 @@
             </div>
         </div>
     </div>
-    <table class="table table-dark text-center">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Vendor Name</th>
-                <th>Type</th>
-                <th>Asset Type</th>
-                <th>Valid From</th>
-                <th>Valid To</th>
-                <th>Address</th>
-                <th>Active</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let vendor of vendorCreationService.vendors | filter: searchTerm
+</div>
+-->
+<div class="container justify-content-center align-items-center vh-100">
+    <div class="jumbotron jumbotronClass">
+        <h1 class="display-4 jumboTexts text-center">
+            VENDOR LISTING
+        </h1>
+        <hr>
+        <br>
+        <div class="header">
+            <div class="row">
+                <div class="col-sm-8">
+                    <input type="search" class="form-control custom-margin-search" placeholder="search text here..."
+                        [(ngModel)]="searchTerm">
+                </div>
+                <div class="col-sm-4">
+                    <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-primary custom-margin-add">
+                        <span><i class="fa fa-user-plus fa-lg"></i></span>
+                        <br>Add Vendor</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <table class="table table-dark text-center">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Vendor Name</th>
+                    <th>Type</th>
+                    <th>Asset Type</th>
+                    <th>Valid From</th>
+                    <th>Valid To</th>
+                    <th>Address</th>
+                    <th>Active</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let vendor of vendorCreationService.vendors | filter: searchTerm
             | paginate: { itemsPerPage: pageSize, currentPage: page }">
-                <td>{{vendor.id}}</td>
-                <td>{{vendor.vendorName}}</td>
-                <td>{{vendor.vendorType}}</td>
-                <td>{{vendor.assetType.assetType}}</td>
-                <td>{{vendor.validFrom | date: "dd-MMM-yyyy"}}</td>
-                <td>{{vendor.validTo | date: "dd-MMM-yyyy"}}</td>
-                <td>{{vendor.address}}</td>
-                <td><input type="checkbox" [checked]="vendor.active" disabled></td>
-                <td><button type="button" class="btn btn-sm btn-outline-info" (click)="updateVendor(vendor)"><i
-                            class="fa fa-edit"></i></button>
-                    &nbsp;<button type="button" class="btn btn-sm btn-outline-danger"
-                        (click)="disableVendor(vendor.id)"><i class="fa fa-trash"></i></button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <!--Footer-->
-    <div class="footer custom-page">
-        <pagination-controls (pageChange)="page = $event"></pagination-controls>
+                    <td>{{vendor.id}}</td>
+                    <td>{{vendor.vendorName}}</td>
+                    <td>{{vendor.vendorType}}</td>
+                    <td>{{vendor.assetType.assetType}}</td>
+                    <td>{{vendor.validFrom | date: "dd-MMM-yyyy"}}</td>
+                    <td>{{vendor.validTo | date: "dd-MMM-yyyy"}}</td>
+                    <td>{{vendor.address}}</td>
+                    <td><input type="checkbox" [checked]="vendor.active" disabled></td>
+                    <td><button type="button" class="btn btn-sm btn-outline-info" (click)="updateVendor(vendor)"><i
+                                class="fa fa-edit"></i></button>
+                        &nbsp;<button type="button" class="btn btn-sm btn-outline-danger"
+                            (click)="disableVendor(vendor.id)"><i class="fa fa-trash"></i></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <!--Footer-->
+        <div class="footer custom-page">
+            <pagination-controls (pageChange)="page = $event"></pagination-controls>
+        </div>
     </div>
 
 </div>
