--- a/src/app/auth/user-dashboard/user-dashboard.component.html
+++ b/src/app/auth/user-dashboard/user-dashboard.component.html
@@ -30,14 +30,14 @@
                 </div>
             </div>
 
-            <div class="card text-white bg-primary mb-3 text-center">
+            <!-- <div class="card text-white bg-primary mb-3 text-center">
                 <div class="card-body">
                     <a [routerLink]="['/employees/add']">
                         <h5 class="card-title">Pending For Approval!</h5>
                     </a>
                     <p class="card-text">Select this option to see what's pending!</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
