--- a/src/app/purchase-order/list-purchase-order/list-purchase-order.component.scss
+++ b/src/app/purchase-order/list-purchase-order/list-purchase-order.component.scss
@@ -52,3 +52,13 @@
     background-attachment: fixed;
   }
   
+
+  .custom-margin-search{
+    float: left;
+    border-radius: 20px;
+}
+
+.custom-margin-button{
+  float: right;
+  border-radius: 20px;
+}
