--- a/src/app/asset-master/asset-list/asset-list.component.html
+++ b/src/app/asset-master/asset-list/asset-list.component.html
@@ -1,49 +1,66 @@
 <div class="container">
 
-   
     <div class="header">
-        <a [routerLink]="['/asset-master/add']" role="button" class="btn btn-outline-primary custom-margin">
-            <span><i class="fa fa-user-plus fa-lg"></i></span><br>Add Asset</a>
+        <div class="row">
+            <div class="col-sm-8">
+                <input type="search" class="form-control custom-margin-search" placeholder="Search text here..."
+                [(ngModel)]="searchTerm">
+            </div>
+            <div class="col-sm-4">
+           
+                <a [routerLink]="['/asset-master/add']" role="button" class="btn btn-outline-primary custom-margin">
+                    <span><i class="fa fa-user-plus fa-lg"></i></span><br>Add Asset</a>
 
+            </div>
     </div>
+    </div>
+
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>ID</th>
-                <!--<th>Asset Type</th>
-                <th>Asset Name</th>-->
-                <th>Purchase Date</th>
-                <th>Model</th>
+                <th>Model Name</th>
+                <th>Asset Name</th>
+                <th>Vendor Name</th>
                 <th>Serial Number</th>
                 <th>Year Of Manufacture</th>
+                <th>Purchase Date</th>
                 <th>Warranty</th>
                 <th>Warranty From Date</th>
-                <th>Warranty To Date</th>  
+                <th>Warranty To Date</th>
                 <th>Active</th>
                 <th>Action</th>
-                <th>Vendor Id</th>
+                
             </tr>
         </thead>
         <tbody>
-            
-            <tr *ngFor="let asset of assetMasterService.assets">
+
+            <tr *ngFor="let asset of assetMasterService.assets | filter: searchTerm |  paginate: { itemsPerPage: pageSize, currentPage: page }">
                 <td>{{asset.id}}</td>
-                <!--<td>{{asset.assetTypes.name}}</td>
-                <td>{{asset.assetDef.assetName}}</td>-->
-                <td>{{asset.model}}</td>
+                <td>{{asset.modelName}}</td>
+                <td>{{asset.assetDefinition.assetName}}</td>
+                <td>{{asset.vendor.vendorName}}</td>
                 <td>{{asset.serialNo}}</td>
                 <td>{{asset.yearOfManufacture}}</td>
                 <td>{{asset.purchaseDate | date: "dd-MMM-yyyy"}}</td>
                 <td>{{asset.warranty}}</td>
                 <td>{{asset.warrantyFrom | date: "dd-MMM-yyyy"}}</td>
                 <td>{{asset.warrantyTo | date: "dd-MMM-yyyy"}}</td>
-               
-                <td><input type="checkbox" [checked]="asset.isActive"disabled></td>
-                <td>
-                    <button type="button" class="btn btn-sm btn-danger" (click)="disableEmployee(employee.id)">
+                <td><input type="checkbox" [checked]="asset.active" disabled></td>
+                <td style="width: 100px;">
+                    <button type="button" class="btn btn-sm btn-info" (click)="updateAsset(asset)">
+                        <i class="fa fa-edit"></i></button>&nbsp;
+                    <button type="button" class="btn btn-sm btn-danger" (click)="disableAsset(asset.id)">
                         <i class="fa fa-trash"></i>
                     </button>
                 </td>
+            </tr>
         </tbody>
     </table>
+    <!--Footer-->
+<div class="footer">
+    
+    <pagination-controls class="custom-page" (pageChange)="page = $event"></pagination-controls>
+</div>
+
 </div>
