--- a/src/app/purchase-order/list-purchase-order/list-purchase-order.component.scss
+++ b/src/app/purchase-order/list-purchase-order/list-purchase-order.component.scss
@@ -62,3 +62,10 @@
   float: right;
   border-radius: 20px;
 }
+
+.custom-page{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: right;
+  //border-radius: 20px;
+}
