--- a/src/app/vendor-creation/vendor-list/vendor-list.component.html
+++ b/src/app/vendor-creation/vendor-list/vendor-list.component.html
@@ -23,20 +23,22 @@
             VENDOR LISTING
         </h1>
         <hr>
-        <br>
-        <div class="header">
+        <!-- <br> -->
+        <!-- <div class="header"> -->
             <div class="row">
                 <div class="col-sm-8">
-                    <input type="search" class="form-control custom-margin-search" placeholder="search text here..."
+                    <input type="search" class="form-control custom-margin-search" placeholder="Search Here..."
                         [(ngModel)]="searchTerm">
                 </div>
                 <div class="col-sm-4">
-                    <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-primary custom-margin-add">
-                        <span><i class="fa fa-user-plus fa-lg"></i></span>
-                        <br>Add Vendor</a>
+                    <a [routerLink]="['/vendor-creation/add']" role="button" class="btn btn-primary custom-margin-add custom-margin-button">
+                        <span><i class="fa fa-plus">Add Vendor</i></span>
+                        <!-- <span><i class="fa fa-user-plus fa-lg"></i></span>
+                        <br>Add Vendor -->
+                    </a>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
     </div>
     <div class="container">
         <table class="table table-dark text-center">
