--- a/src/app/auth/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/auth/admin-dashboard/admin-dashboard.component.html
@@ -33,7 +33,7 @@
     
             <div class="card text-white bg-primary mb-3 text-center">
                 <div class="card-body">
-                    <a [routerLink]="['/employees/add']">
+                    <a [routerLink]="['/asset-master/pending']">
                         <h5 class="card-title">Purchase Order Action</h5>
                     </a>
                     <p class="card-text">Approve/Reject Your Pennding Purchase Orders!</p>
