--- a/src/app/asset-master/pending-requests/pending-requests.component.html
+++ b/src/app/asset-master/pending-requests/pending-requests.component.html
@@ -8,42 +8,51 @@
     <br>
 </div>
 -->
+<div class="container justify-content-center align-items-center vh-100">
 
-<div class="container">
-    <table class="table table-dark text-center">
-        <thead>
-            <tr>
-                <th>
-                    ID
-                </th>
-                <th>
-                    Order Number
-                </th>
-                <th>
-                    Type
-                </th>
-                <th>
-                    Definition
-                </th>
-                <th>
-                    Vendor
-                </th>
-                <th>
-                    Quantity
-                </th>
-                <th>
-                    Date of Purchase
-                </th>
-                <th>
-                    Date Of Delivery
-                </th>
-                <th>
-                    Status
-                </th>
-                <th>
-                    Action
-                </th>
-                <!--
+    <div class="jumbotron jumbotronClass">
+        <h1 class="display-4 jumboTexts text-center">
+            STATUS PENDING
+        </h1>
+        <hr>
+    </div>
+
+
+    <div class="container">
+        <table class="table table-dark text-center">
+            <thead>
+                <tr>
+                    <th>
+                        ID
+                    </th>
+                    <th>
+                        Order Number
+                    </th>
+                    <th>
+                        Type
+                    </th>
+                    <th>
+                        Definition
+                    </th>
+                    <th>
+                        Vendor
+                    </th>
+                    <th>
+                        Quantity
+                    </th>
+                    <th>
+                        Date of Purchase
+                    </th>
+                    <th>
+                        Date Of Delivery
+                    </th>
+                    <th>
+                        Status
+                    </th>
+                    <th>
+                        Action
+                    </th>
+                    <!--
                 <th>
                     Active
                 </th>
@@ -52,24 +61,24 @@
                     Status
                 </th>
                 -->
-            </tr>
-        </thead>
-        <tbody>
+                </tr>
+            </thead>
+            <tbody>
 
-            <tr *ngFor="let purchaseOrder of purchaseOrderService.purchaseOrders">
-                <td>{{purchaseOrder.id}}</td>
-                <td>{{purchaseOrder.assetPurchaseOrderNumber}}</td>
-                <td>{{purchaseOrder.assetDefinition.assetType.assetType}}</td>
-                <td>{{purchaseOrder.assetDefinition.assetName}}</td>
-                <td>{{purchaseOrder.vendor.vendorName}}</td>
-                <td>{{purchaseOrder.assetQuantity}}</td>
-                <td>{{purchaseOrder.assetOrderDate | date: "dd-MMM-yyyy"}}</td>
-                <td>{{purchaseOrder.assetDeliveryDate | date: "dd-MMM-yyyy"}}</td>
-                <td>{{purchaseOrder.status.status}}</td>
-                <td style="width: 100px;"><button type="button" class="btn btn-sm btn-outline-info"
-                        (click)="addAssetMaster(purchaseOrder)"><i class="fa fa-check-square"
-                            aria-hidden="true"></i></button></td>
-                <!--
+                <tr *ngFor="let purchaseOrder of purchaseOrderService.purchaseOrders">
+                    <td>{{purchaseOrder.id}}</td>
+                    <td>{{purchaseOrder.assetPurchaseOrderNumber}}</td>
+                    <td>{{purchaseOrder.assetDefinition.assetType.assetType}}</td>
+                    <td>{{purchaseOrder.assetDefinition.assetName}}</td>
+                    <td>{{purchaseOrder.vendor.vendorName}}</td>
+                    <td>{{purchaseOrder.assetQuantity}}</td>
+                    <td>{{purchaseOrder.assetOrderDate | date: "dd-MMM-yyyy"}}</td>
+                    <td>{{purchaseOrder.assetDeliveryDate | date: "dd-MMM-yyyy"}}</td>
+                    <td>{{purchaseOrder.status.status}}</td>
+                    <td style="width: 100px;"><button type="button" class="btn btn-sm btn-outline-info"
+                            (click)="addAssetMaster(purchaseOrder)"><i class="fa fa-check-square"
+                                aria-hidden="true"></i></button></td>
+                    <!--
                 <td><input type="checkbox" [checked]="employee.active" disabled></td>
                 <td>
                     <button type="button" class="btn btn-sm btn-light" (click)="updateEmployee(employee)">
@@ -84,8 +93,9 @@
                     
                 </td>
                 -->
-            </tr>
+                </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
