--- a/src/app/asset-master/asset-add/asset-add.component.html
+++ b/src/app/asset-master/asset-add/asset-add.component.html
@@ -1,34 +1,43 @@
-<div class="container">
-    <h3>New Asset Info</h3>
-    <hr>
-    <!--Template Driven form-->
+<div class="container justify-content-center align-items-center vh-100">
 
-
-    <form name="frmEmployee" #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)">
-
-
-        <!--Asset Master Id:hidden-->
-        <div class="form-group">
-            <input type="hidden" readonly name="id" [(ngModel)]="assetMasterService.formAssetMasterData.id" />
-
-        </div>
-     
-  <!--Model Name-->
-  <div class="form-group">
-    <label>Model Name</label>
-    <input type="text" name="modelName" #modelName="ngModel" placeholder="Enter Model Name" minlength="3" maxlength="25"
-        [(ngModel)]="assetMasterService.formAssetMasterData.modelName" class="form-control" required
-        [ngClass]="{'is-invalid':modelName.touched && modelName.invalid}" />
-
-    <!--Validation Error message-->
-    <div class="validation-error" *ngIf="modelName.touched && modelName.invalid">
-        <div *ngIf="modelName.errors.required">
-            Model Name is invalid or required
-
-        </div>
+    <div class="jumbotron jumbotronClass">
+        <h1 class="display-4 jumboTexts">
+            NEW ASSET INFO
+        </h1>
+        <hr>
     </div>
-</div>
-   <!--<div class="form-group">
+
+    <div class="container jumboSubTexts">
+        <!-- <h3>New Asset Info</h3> -->
+        <hr>
+        <!--Template Driven form-->
+
+
+        <form name="frmEmployee" #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)">
+
+
+            <!--Asset Master Id:hidden-->
+            <div class="form-group">
+                <input type="hidden" readonly name="id" [(ngModel)]="assetMasterService.formAssetMasterData.id" />
+
+            </div>
+
+            <!--Model Name-->
+            <div class="form-group">
+                <label>Model Name</label>
+                <input type="text" name="modelName" #modelName="ngModel" placeholder="Enter Model Name" minlength="3"
+                    maxlength="25" [(ngModel)]="assetMasterService.formAssetMasterData.modelName" class="form-control"
+                    required [ngClass]="{'is-invalid':modelName.touched && modelName.invalid}" />
+
+                <!--Validation Error message-->
+                <div class="validation-error" *ngIf="modelName.touched && modelName.invalid">
+                    <div *ngIf="modelName.errors.required">
+                        Model Name is invalid or required
+
+                    </div>
+                </div>
+            </div>
+            <!--<div class="form-group">
         <label for="">Asset Name</label>
         <select name="assetDefId" id="assetDefId" #assetDefId="ngModel"
             [(ngModel)]="assetMasterService.formAssetMasterData.assetDefId" class="form-control" required>
@@ -36,18 +45,18 @@
         <option *ngFor="let asset of assetMasterService.assetDef" value="{{asset.id}}">
             {{asset.assetName}}
         </option>
-    </select>--> 
-    <!--Validation Error message-->
-    
-          <!-- <div class="validation-error" *ngIf="assetDefId.touched && assetDefId.invalid">
+    </select>-->
+            <!--Validation Error message-->
+
+            <!-- <div class="validation-error" *ngIf="assetDefId.touched && assetDefId.invalid">
                 <div *ngIf="assetDefId.errors.required">
                     Asset Name is invalid or required
 
                 </div>
             </div>
     </div>
---> 
-<!--
+-->
+            <!--
     <div class="form-group">
         <label for="">Vendor Name</label>
         <select name="vendorId" id="vendorId" #vendorId="ngModel"
@@ -57,66 +66,67 @@
             {{vendor.vendorName}}
         </option>
     </select>-->
-    <!--Validation Error message-->
-    
-         <!--   <div class="validation-error" *ngIf="vendorId.touched && vendorId.invalid">
+            <!--Validation Error message-->
+
+            <!--   <div class="validation-error" *ngIf="vendorId.touched && vendorId.invalid">
                 <div *ngIf="vendorId.errors.required">
                     vendor Name is invalid or required
 
                 </div>
             </div>
     </div>-->
-        <!--Serial No-->
-        <div class="form-group">
-            <label>Serial No</label>
-            <input type="text" name="serialNo" #serialNo="ngModel" placeholder="Enter Serial No"
-                [(ngModel)]="assetMasterService.formAssetMasterData.serialNo" class="form-control" required
-                [ngClass]="{'is-invalid':serialNo.touched && serialNo.invalid}" />
+            <!--Serial No-->
+            <div class="form-group">
+                <label>Serial No</label>
+                <input type="text" name="serialNo" #serialNo="ngModel" placeholder="Enter Serial No"
+                    [(ngModel)]="assetMasterService.formAssetMasterData.serialNo" class="form-control" required
+                    [ngClass]="{'is-invalid':serialNo.touched && serialNo.invalid}" />
 
-            <!--Validation Error message-->
-            <div class="validation-error" *ngIf="serialNo.touched && serialNo.invalid">
-                <div *ngIf="serialNo.errors.required">
-                    Serial No is required
+                <!--Validation Error message-->
+                <div class="validation-error" *ngIf="serialNo.touched && serialNo.invalid">
+                    <div *ngIf="serialNo.errors.required">
+                        Serial No is required
 
+                    </div>
                 </div>
             </div>
-        </div>
-       
 
-        <!--Year Of Manufacture-->
-        <div class="form-group">
-            <label>Year of Manufacture</label>
-            <input type="text" name="yearOfManufacture" #yearOfManufacture="ngModel" placeholder="Enter Year of Manufacture"
-                [(ngModel)]="assetMasterService.formAssetMasterData.yearOfManufacture" class="form-control" required
-                [ngClass]="{'is-invalid':yearOfManufacture.touched && yearOfManufacture.invalid}" />
 
-            <!--Validation Error message-->
-            <div class="validation-error" *ngIf="yearOfManufacture.touched && yearOfManufacture.invalid">
-                <div *ngIf="yearOfManufacture.errors.required">
-                    Year of Manufacture is invalid or required
+            <!--Year Of Manufacture-->
+            <div class="form-group">
+                <label>Year of Manufacture</label>
+                <input type="text" name="yearOfManufacture" #yearOfManufacture="ngModel"
+                    placeholder="Enter Year of Manufacture"
+                    [(ngModel)]="assetMasterService.formAssetMasterData.yearOfManufacture" class="form-control" required
+                    [ngClass]="{'is-invalid':yearOfManufacture.touched && yearOfManufacture.invalid}" />
 
+                <!--Validation Error message-->
+                <div class="validation-error" *ngIf="yearOfManufacture.touched && yearOfManufacture.invalid">
+                    <div *ngIf="yearOfManufacture.errors.required">
+                        Year of Manufacture is invalid or required
+
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Purchase Date-->
-        <div class="form-group">
-            <label>Purchase Date</label>
-            <input type="date" name="purchaseDate" #purchaseDate="ngModel" 
-                [(ngModel)]="assetMasterService.formAssetMasterData.purchaseDate" class="form-control" required
-                [ngClass]="{'is-invalid':purchaseDate.touched && purchaseDate.invalid}" />
 
-            <!--Validation Error message-->
-            <div class="validation-error" *ngIf="purchaseDate.touched && purchaseDate.invalid">
-                <div *ngIf="purchaseDate.errors.required">
-                    Purchase date is invalid or required
+            <!--Purchase Date-->
+            <div class="form-group">
+                <label>Purchase Date</label>
+                <input type="date" name="purchaseDate" #purchaseDate="ngModel"
+                    [(ngModel)]="assetMasterService.formAssetMasterData.purchaseDate" class="form-control" required
+                    [ngClass]="{'is-invalid':purchaseDate.touched && purchaseDate.invalid}" />
 
+                <!--Validation Error message-->
+                <div class="validation-error" *ngIf="purchaseDate.touched && purchaseDate.invalid">
+                    <div *ngIf="purchaseDate.errors.required">
+                        Purchase date is invalid or required
+
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <!--Warranty-->
-        <!-- <div class="form-group">
+
+            <!--Warranty-->
+            <!-- <div class="form-group">
             <label>Warranty</label>
             <input type="text" name="warranty" #warranty="ngModel" placeholder="Enter Warranty "
                 [(ngModel)]="assetMasterService.formAssetMasterData.warranty" class="form-control" required
@@ -130,28 +140,28 @@
                 </div>
             </div>
         </div> -->
-           <!-- Warranty -->
-           <div class="form-group">
-            <label>Warranty</label>
-            <select name="warranty" id="warranty" #warranty="ngModel"
-                [(ngModel)]="assetMasterService.formAssetMasterData.warranty" class="form-control">
-                <option value='0' selected disabled>---Select Asset Type-----------</option>
-                <option value='Y'>Yes</option>
-                <option value='N'>No</option>
-            </select>
-        </div>
+            <!-- Warranty -->
+            <div class="form-group">
+                <label>Warranty</label>
+                <select name="warranty" id="warranty" #warranty="ngModel"
+                    [(ngModel)]="assetMasterService.formAssetMasterData.warranty" class="form-control">
+                    <option value='0' selected disabled>---Select Asset Type-----------</option>
+                    <option value='Y'>Yes</option>
+                    <option value='N'>No</option>
+                </select>
+            </div>
             <!--Warranty from date-->
             <div class="form-group" *ngIf="assetMasterService.formAssetMasterData.warranty == 'Y'">
                 <label>Warranty from date</label>
                 <input type="date" name="warrantyFrom" #warrantyFrom="ngModel"
                     [(ngModel)]="assetMasterService.formAssetMasterData.warrantyFrom" class="form-control" required
                     [ngClass]="{'is-invalid':warrantyFrom.touched && warrantyFrom.invalid}" />
-    
+
                 <!--Validation Error message-->
                 <div class="validation-error" *ngIf="warrantyFrom.touched && warrantyFrom.invalid">
                     <div *ngIf="warrantyFrom.errors.required">
                         warranty from date is invalid or required
-    
+
                     </div>
                 </div>
             </div>
@@ -162,33 +172,35 @@
                 <input type="date" name="warrantyTo" #warrantyTo="ngModel"
                     [(ngModel)]="assetMasterService.formAssetMasterData.warrantyTo" class="form-control" required
                     [ngClass]="{'is-invalid':warrantyTo.touched && warrantyTo.invalid}" />
-    
+
                 <!--Validation Error message-->
                 <div class="validation-error" *ngIf="warrantyTo.touched && warrantyTo.invalid">
                     <div *ngIf="warrantyTo.errors.required">
                         warranty to date is invalid or required
-    
+
                     </div>
                 </div>
             </div>
-          
-        <!--active-->
-        <div class="form-group">
-            <div class="form-check">
-                <input type="checkbox" name="isActive" #active="ngModel"
-                    [(ngModel)]="assetMasterService.formAssetMasterData.isActive" class="form-check-input custom-checkbox" />
 
-                <label class="form-check-label">Is Available</label>
+            <!--active-->
+            <div class="form-group">
+                <div class="form-check">
+                    <input type="checkbox" name="isActive" #active="ngModel"
+                        [(ngModel)]="assetMasterService.formAssetMasterData.isActive"
+                        class="form-check-input custom-checkbox" />
+
+                    <label class="form-check-label">Is Available</label>
+                </div>
             </div>
-        </div>
-        <!--submit-->
-        <div class="form-group">
-            <button type="submit" class="btn btn-lg btn-primary form-control"
-                [disabled]="!(form.valid && form.dirty)">INSERT
-            </button>
-        </div>
+            <!--submit-->
+            <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-primary form-control"
+                    [disabled]="!(form.valid && form.dirty)">INSERT
+                </button>
+            </div>
 
 
 
-    </form>
+        </form>
+    </div>
 </div>
