--- a/src/app/asset-master/asset-add/asset-add.component.scss
+++ b/src/app/asset-master/asset-add/asset-add.component.scss
@@ -50,6 +50,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    overflow-x: scroll,hidden;
+    overflow-x: scroll;    
   }
   
