--- a/src/app/vendor-creation/vendor-add/vendor-add.component.scss
+++ b/src/app/vendor-creation/vendor-add/vendor-add.component.scss
@@ -34,4 +34,5 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow-x: scroll;    
   }
