--- a/src/app/asset-definition/asset-definition-list/asset-definition-list.component.html
+++ b/src/app/asset-definition/asset-definition-list/asset-definition-list.component.html
@@ -12,8 +12,8 @@
               <h5 class="card-title">{{ assetDefinition.assetName }}</h5>
             </div>
             <div>
-              <button class="btn btn-sm btn-primary mr-2" (click)="editAssetDefinition(assetDefinition)">Edit</button>
-              <button class="btn btn-sm btn-danger" (click)="deleteAssetDefinition(assetDefinition)">Delete</button>
+              <button class="btn btn-sm btn-danger" (click)="editAssetDefinition(assetDefinition)">Delete</button>
+              <button class="btn btn-sm btn-primary mr-2" (click)="deleteAssetDefinition(assetDefinition)">Edit</button>
             </div>
           </div>
         </div>
